--- a/lowrisc-toolchain-gcc-multilib-baremetal.config
+++ b/lowrisc-toolchain-gcc-multilib-baremetal.config
@@ -16,9 +16,8 @@ CT_ZLIB_NEEDED=y
 # CT_LOG_PROGRESS_BAR is not set
 
 # Installation prefix directory; the toolchain will end up in exactly
-# this directory. We have to do this expansion to use an environment
-# variable from the build script.
-CT_PREFIX_DIR="${CT_PREFIX_DIR}"
+# this directory. CT_PREFIX_DIR will be added by the
+# ./build-gcc-with-args.sh script
 
 # Don't save tarballs for re-use (needs writable and pre-created
 # CT_LOCAL_TARBALLS_DIR otherwise)
