--- a/_build-deps.yml
+++ b/_build-deps.yml
@@ -6,7 +6,8 @@ steps:
 - bash: |
     sudo apt-get install -y build-essential autoconf bison flex \
       texinfo help2man gawk libtool-bin libncurses5-dev git libtool \
-      gettext wget curl libglib2.0-dev libfdt-dev libpixman-1-dev zlib1g-dev
+      gettext wget curl libglib2.0-dev libfdt-dev libpixman-1-dev zlib1g-dev \
+      lld-6.0 clang-6.0 cmake
   displayName: 'Install build dependencies'
 
 - bash: |
